--- a/package.json
+++ b/package.json
@@ -2,8 +2,49 @@
   "name": "react-sparklines-typescript",
   "version": "1.0.0",
   "description": "react-sparklines rewritten in typescript and modern react patterns",
-  "main": "index.js",
-  "repository": "git@github.com:acodesmith/react-sparklines-typescript.git",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "directories": {
+    "src": "src/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/acodesmith/react-sparklines-typescript.git"
+  },
   "author": "acodesmith <adam@acodesmith.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode=production",
+    "start": "webpack --watch"
+  },
+  "keywords": [
+    "react",
+    "component",
+    "react-component",
+    "charts",
+    "sparklines",
+    "visualization",
+    "jsx"
+  ],
+  "bugs": {
+    "url": "https://github.com/acodesmith/react-sparklines-typescript/issues"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/react": "^16.9.34",
+    "babel-loader": "^8.1.0",
+    "prettier": "2.0.4",
+    "react": "^16.13.1",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
+  }
 }
