--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,10 @@
     "esModuleInterop": true,
     "sourceMap": true
   },
-  "exclude": ["node_modules", "build", "webpack.config.js", "src/dataProcessing"]
+  "exclude": [
+    "node_modules",
+    "build",
+    "webpack.config.js",
+    "src/dataProcessing"
+  ]
 }
