Removing the test from tsc checks. Adding snapshots.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "node_modules",
     "build",
     "webpack.config.js",
-    "src/dataProcessing"
+    "src/dataProcessing",
+    "src/tests/**",
+    "coverage"
   ]
 }
